--- a/index.html
+++ b/index.html
@@ -88,6 +88,18 @@
                         <option value="pending">未回答</option>
                     </select>
                 </div>
+                <div class="filter-group">
+                    <button class="chouseisan-sync-btn" onclick="updateFromChouseisan()">
+                        <i class="fas fa-sync-alt"></i>
+                        調整さんから同期
+                    </button>
+                </div>
+                <div class="filter-group">
+                    <button class="chouseisan-sync-btn manual-input-btn" onclick="showManualDataInput()">
+                        <i class="fas fa-edit"></i>
+                        手動データ入力
+                    </button>
+                </div>
             </div>
 
             <div class="alumni-grid" id="alumni-grid">
